# internship-activity

./: .coverage  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  fix_mypy.py  messages.pot  mypy.ini  pyproject.toml  repro_timeout.py  repro_timeout_v2.py  repro_timeout_v3.py  requirements.txt  run-local-ci.sh  temp_roster.db  test_asyncio_patch.py  test_asyncio_patch_2.py  test_changes.py  test_commits.py  test_gitlab.py  test_users.py
.gitlab/issue_templates/: Documentation.md
.gitlab/merge_request_templates/: Refactoring.md
Projects/: api_helper.py  compliance_Service.py  compliance_service.py  complicance_checks.py  file_classifier.py  license_checker.py  metadata_checker.py  network.py  parse_uvlock.py  project_detector.py  project_ui.py  readme_checker.py  template_checker.py  templates_checker.py  tools_checker.py
batch_mode/: api_helper.py  batch_controller.py  batch_service.py  batch_servie.py  batch_ui.py  client.py  export_service.py  file_reader.py  retry_helper.py
gitlab_utils/: api_helper.py  async_bad_mrs.py  batch.py  client.py  commits.py  description_quality.py  files_reader.py  groups.py  issues.py  merge_requests.py  network.py  parsers.py  pipeline_checker.py  projects.py  retry_helper.py
gitlabutils/utils/: gitlab_client.py
issues/: issue_metrics.py  issue_service.py  issue_ui.py
modes/: bad_issue.py  bad_mrs_batch.py  batch_analytics.py  batch_mode.py  compliance_mode.py  team_leaderboard.py  user_profile.py
projects/: classification.py  compliance_checks.py  project_ui.py
reports/: export.py
scripts/: diagnose_review.py  fix_imports_v2.py  generate_report.py  verify_batch_users.py  verify_contribution_fix.py  verify_data.py
src/gitlab_compliance_checker/infrastructure/corpus/: client.py
src/gitlab_compliance_checker/infrastructure/gitlab/: api_helper.py  batch.py  bridge.py  client.py  commits.py  config.py  files_reader.py  groups.py  issues.py  merge_requests.py  network.py  parse_uvlock.py  pipeline_checker.py  projects.py  retry_helper.py  timelogs.py  users.py
src/gitlab_compliance_checker/services/: roster_service.py
src/gitlab_compliance_checker/services/batch/: api_helper.py  batch_controller.py  batch_service.py  client.py  export_service.py  legacy_batch_service.py  retry_helper.py
src/gitlab_compliance_checker/services/compliance/: classification.py  compliance_service.py  file_classifier.py  license_checker.py  metadata_checker.py  readme_checker.py  templates_checker.py  tools_checker.py
src/gitlab_compliance_checker/services/profile/: profile_service.py  profile_utils.py
src/gitlab_compliance_checker/services/weekly_performance/: aggregator.py  models.py
src/gitlab_compliance_checker/ui/: admin.py  batch.py  compliance.py  csv_common.py  leaderboard.py  main.py  profile.py  weekly_performance.py
src/internship_activity_tracker/infrastructure/: database.py  models.py
src/internship_activity_tracker/infrastructure/gitlab/: batch.py  bridge.py  client.py  commits.py  graphql_client.py  graphql_queries.py  groups.py  issues.py  merge_requests.py  projects.py  retry_helper.py  timelogs.py
src/internship_activity_tracker/services/batch/: api_helper.py  client.py  legacy_batch_service.py
src/internship_activity_tracker/services/weekly_performance/: aggregator.py  models.py
src/internship_activity_tracker/ui/: batch.py  csv_common.py  leaderboard.py  main.py  profile.py  weekly_performance.py
tests/: conftest.py  test_admin_ui.py  test_api_utils.py  test_app.py  test_async_bad_mrs.py  test_async_batch.py  test_asyncio_patch.py  test_asyncio_patch_2.py  test_bad_issue.py  test_bad_mrs.py  test_batch.py  test_batch_api_helper.py  test_batch_client.py  test_batch_client_commits.py  test_batch_client_extended.py  test_batch_export_service.py  test_batch_logic.py  test_batch_mode.py  test_batch_processing.py  test_batch_service.py  test_batch_utils.py  test_changes.py  test_client.py  test_commits.py  test_compliance_service_logic.py  test_corpus_client.py  test_csv_common.py  test_description_quality.py  test_fetch.py  test_fetch_script.py  test_issue_ui.py  test_issues.py  test_leaderboard_extended.py  test_leaderboard_ui_extended.py  test_merge_requests.py  test_misc_utils.py  test_modes_bad_mrs_batch.py  test_modes_batch_analytics.py  test_modes_batch_mode.py  test_modes_compliance_mode.py  (+20 more)
tests/test_gitlab_utils/: test_helpers.py  test_parsers.py  test_pipeline_checker.py  test_pipeline_checker_advanced.py  test_retry_helper.py  test_users_projects.py
user_profile/: profile_service.py  profile_ui.py  profile_utils.py  render_user_profile.py
